--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="pb-3">HI MY NAME IS DHARSHAN</h1>
-          <h4 class="pb-5">Passionate frontend developer with strong programming roots in Java, Python, and C++.
+          <h1 class="pb-3 text-black">HI MY NAME IS DHARSHAN</h1>
+          <h4 class="pb-4 text-dark">Passionate frontend developer with strong programming roots in Java, Python,c and C++.
             Dedicated to crafting responsive, user-centric web experiences with clean and modern design</h4>
           <a href="https://wa.me/+919952821408" class="btn btn-dark text-uppercase">Contact me</a>
         </div>
@@ -43,7 +43,7 @@
     </div>
   </section>
 
-  <section class="py-5" id="about">
+  <section class="py-5 container-e" id="about">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 pt-3">
@@ -57,8 +57,7 @@
       </div>
     </div>
   </section>
-
-  <section class="bg-light py-5" id="skills">
+<section class="bg-light py-5 container-id" id="skills">
     <div class="container">
       <h4 class="text-center mb-4">Skills</h4>
       <div class="row g-4 justify-content-center">
