--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dharshan Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="/portfolio/css/style.css" />
+  <link rel="stylesheet" href="/portfolio/style.css" />
   <style>
     body {
       overflow-x: hidden;
